# Cyberflage-security

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.json  cyberflage.py  main.py  pyproject.toml  requirements.txt  stimulate-attack.py
.github/: pull_request_template.md
config/: config.example.json
cyberflage/: __init__.py  core.py  detector.py  utils.py
docs/: SystemArchitecture.md  UserGuide.md
scripts/: simulate_attack.py
tests/: test_detector.py
