[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberflage"
version = "0.1.8"
description = "Modular CyberFlage package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psutil",
  "watchdog",
  "flask",
  "requests",
]

[project.scripts]
cyberflage = "cyberflage.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyberflage*"]
