[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberflage-security"
version = "0.1.0"
description = "CyberFlage modular security project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psutil",
  "watchdog",
  "flask",
  "requests",
]

[project.scripts]
cyberflage-security = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cyberflage*"]
